syntax = "proto3";
package proto;

option go_package = "./proto";

message RogueTalents {
	// Assassination
	int32 improved_eviscerate = 1;
	int32 remorseless_attacks = 2;
	int32 malice = 3;
	int32 ruthlessness = 4;
	int32 murder = 5;
	int32 improved_slice_and_dice = 6;
	bool relentless_strikes = 7;
	int32 improved_expose_armor = 8;
	int32 lethality = 9;
	int32 vile_poisons = 10;
	int32 improved_poisons = 11;
	bool cold_blood = 12;
	int32 improved_kidney_shot = 13;
	int32 seal_fate = 14;
	bool vigor = 15;

	// Combat
	int32 improved_gouge = 16;
	int32 improved_sinister_strike = 17;
	int32 lightning_reflexes = 18;
	int32 improved_backstab = 19;
	int32 deflection = 20;
	int32 precision = 21;
	int32 endurance = 22;
	bool riposte = 23;
	int32 improved_sprint = 24;
	int32 improved_kick = 25;
	int32 dagger_specialization = 26;
	int32 dual_wield_specialization = 27;
	int32 mace_specialization = 28;
	bool blade_flurry = 29;
	int32 sword_specialization = 30;
	int32 fist_weapon_specialization = 31;
	int32 weapon_expertise = 32;
	int32 aggression = 33;
	bool adrenaline_rush = 34;

	// Subtlety
	int32 master_of_deception = 35;
	int32 opportunity = 36;
	int32 sleight_of_hand = 37;
	int32 elusiveness = 38;
	int32 camouflage = 39;
	int32 initiative = 40;
	bool ghostly_strike = 41;
	int32 improved_ambush = 42;
	int32 setup = 43;
	int32 improved_sap = 44;
	int32 serrated_blades = 45;
	int32 heightened_senses = 46;
	bool preparation = 47;
	int32 dirty_deeds = 48;
	bool hemorrhage = 49;
	int32 deadliness = 50;
	bool premeditation = 51;
}

enum RogueRune {
	RogueRuneNone = 0;
	RuneDeadlyBrew = 399965;
	RuneJustAFleshWound = 400014;
	RuneQuickDraw = 398196;
	RuneSlaughterFromTheShadows = 424925;
	RuneBetweenTheEyes = 400009;
	RuneBladeDance = 400012;
	RuneEnvenom = 399963;
	RuneMainGauche = 424919;
	RuneMutilate = 399956;
	RuneSaberSlash = 424785;
	RuneShadowstrike = 399985;
	RuneShiv = 424799;
	RuneMasterOfSubtlety = 425096;
	RuneWaylay = 408700;
	RuneRollingWithThePunches = 400093;
	RuneShadowstep = 400101;
	RuneShurikenToss = 399986;
	RunePoisonedKnife = 425012;
}

message RogueOptions {

}

message Rogue {
	message Rotation {
	}

	RogueOptions options = 2;
}

message TankRogue {
	message Rotation {
	}

	RogueOptions options = 2;
}
